[package]
name = "c2e"
version = "0.1.0"
authors = ["Masanori Misono <m.misono760@gmail.com>"]

[dependencies]
cbpf = {path = "../cbpf"}
rbpf = { git = "https://github.com/qmonnet/rbpf" }

byteorder = "1.1"

error-chain = {version = "0.11.0", optional = true}
structopt = { version = "0.1.0", optional = true}
structopt-derive = {version = "0.1.0", optional = true}
# use offline-bpf branch to compile cBPF program
# see: https://github.com/ebfull/pcap/pull/56
pcap = { git = "https://github.com/polachok/pcap", branch="offline-bpf", optional = true}

[features]
default = ["pcap", "structopt", "structopt-derive", "error-chain"]

[[bin]]
name = "c2e"
path = "src/bin/c2e.rs"
required-features = ["pcap", "structopt", "structopt-derive", "error-chain"]

