[package]
name = "cbpf"
version = "0.1.0"
authors = ["Masanori Misono <m.misono760@gmail.com>"]

[dependencies]
byteorder = { version = "1.1", default-features = false}

error-chain = {version = "0.11.0", optional = true}
structopt = { version = "0.1.0", optional = true}
structopt-derive = {version = "0.1.0", optional = true}
# use offline-bpf branch to compile cBPF program
# see: https://github.com/ebfull/pcap/pull/56
pcap = { git = "https://github.com/polachok/pcap", branch="offline-bpf", optional = true}

[features]
default = ["std", "pcap", "structopt", "structopt-derive", "error-chain"]
std = []

[[bin]]
name = "cbpf_run"
path = "src/bin/run.rs"
required-features = ["std", "structopt", "structopt-derive", "error-chain"]

[[bin]]
name = "cbpf_compile"
path = "src/bin/compile.rs"
required-features = ["std", "pcap", "structopt", "structopt-derive", "error-chain"]
